--- a/style.css
+++ b/style.css
@@ -26,21 +26,18 @@ header {
   padding: 4rem 1rem;
 }
 
-header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
+
+.logo {
+  width: 150px;
+  height: 105px
 }
 
 .botones {
+  margin-top: 20px;
+  justify-content: center;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
-
-}
-
-.button1{
-  text-align: left;
-
 }
 
  a {
