--- a/style.css
+++ b/style.css
@@ -252,7 +252,50 @@ header {
   font-weight: bold;
 }
 
+/* 🔹 Planes */
+
+.planes-info{
+  background-color: #f9f9f9;
+}
+.planes-title {
+  margin-bottom: 10px;
+}
+
+.conteiner-button p {
+  margin-bottom: 10px;
+
+}
+
+#planes-info{
+  background-color: #f8f8f8;
+}
+
+.planes-link-button{
+  border: solid;
+  border-width: 2px;
+  border-color: black;
+  border-radius: 50px;
+  width: 120px;
+  height: 70px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  background-color:#00a86b;
+  color: white;
+  transition: opacity 0.2s;
+}
+
+.planes-link-button:hover{
+opacity: 0.8;
+cursor: pointer;
+
+}
+
 /* 🔹 Formulario */
+
+#contacto{
+  background-color: var(--blanco);
+}
+
 form {
   max-width: 500px;
   margin: 0 auto;
